Fix extra margin in small screen

--- a/app/assets/stylesheets/bootstrap/_responsive-767px-max.scss
+++ b/app/assets/stylesheets/bootstrap/_responsive-767px-max.scss
@@ -14,8 +14,9 @@
   .navbar-fixed-top,
   .navbar-fixed-bottom,
   .navbar-static-top {
-    margin-left: -20px;
-    margin-right: -20px;
+    // margin-left: -20px;
+    // margin-right: -20px;
+    padding: 0;
   }
   // Remove padding on container given explicit padding set on body
   .container-fluid {
